syntax = "proto3";

package models;

import "google/protobuf/empty.proto";

message User {
  Flat favourites = 1;
}

message Project {
  int32 id = 1;
  string title = 2;
  string description = 3;
  repeated string images = 4;
  Address address = 5;
  double minFlatPrice = 6;
  repeated NearestTransports nearestTransports = 7;
  int32 streamID = 8;
}

message Address {
  int32 id = 1;
  string address = 2;
  Coordinates coordinates = 3;
}

message Coordinates {
  double latitude = 2;
  double longitude = 3;
}

message NearestTransports {
  string name = 1;
  string time = 2;
}

message Flat {
  int32 id = 1;
  double price = 2;
  int32 rooms = 3;
  int32 number = 4;
  int32 area = 5;
  int32 floor = 6;
  string trimming = 7;
  string finishing = 8;
  repeated string images = 9;
  bool isFavourite = 10;
}

message News {
  int32 id = 1;
  string title = 2;
  string description = 3;
  repeated string images = 4;
  string date = 5;
}

//message GetProjectsRequest {}

message GetProjectsResponse {
  repeated Project projects = 1;
}

message GetFlatsRequest {
  int32 projectID = 1;
}

message GetFlatsResponse {
  repeated Flat flats = 1;
}

//message GetNewsRequest {}

message GetNewsResponse {
  repeated News news = 1;
}

message GetFavouritesRequest {}

message GetFavouritesResponse {}

service ProjectService {
  rpc GetProjects (google.protobuf.Empty) returns (GetProjectsResponse) {}
  rpc GetFlats (GetFlatsRequest) returns (GetFlatsResponse) {}
  rpc GetNews (google.protobuf.Empty) returns (GetNewsResponse) {}
  rpc GetFavourites (GetFavouritesRequest) returns (GetFavouritesResponse) {}
}